countdown.css
h1,
h2,
h3,
h4,
noscript {
  font-family: geosanslight-nmsregular, Helvetica, Verdana, Arial, sans-serif;
}
.countdown,
.minor-countdown {
  font-family: 'Roboto Mono', monospace;
  font-weight: 300;
}
.countdown-container.small {
  font-size: 0.75em;
}
.countdown-container.large {
  font-size: 1.5em;
}
body {
  font-family: 'Open Sans', sans-serif;
  margin: 0;
  overflow: hidden;
  background-size: cover !important;
  background-repeat: no-repeat !important;
  background-position: center !important;
  height: 100vh;
  background: url('img/BlueSpace.png');
}
iframe {
  border: none;
  width: 100%;
}
.center {
  display: block;
  margin: 0 auto;
  text-align: center;
}
header {
  position: fixed;
  z-index: 4;
  top: 0;
  left: 0;
  display: block;
  overflow: hidden;
  height: 60px;
  width: 100%;
  background-color: #7fbc4a;
  color: white;
  box-shadow: 0 3px 10px 0 rgba(0, 0, 0, .3);
  transition: background-color 0.3s ease-out, box-shadow 0.3s ease-out;
}
header h1 {
  max-height: 60px;
  margin: 10px 20px;
}
header .button-container {
  position: absolute;
  height: 60px;
  right: 100vw;
  top: 0;
  transition: right 0.3s ease-out;
}
.open .button-container {
  right: 0;
}
header button {
  padding: 0;
  transition: background-color 0.2s ease-out;
  border: none;
  background-color: transparent;
  background-image: none;
  width: 60px;
  height: 60px;
  -webkit-tap-highlight-color: transparent;
  outline: none;
  margin-left: -4px;
}
header button svg {
  height: 24px;
  width: 24px;
  padding: 18px;
  fill: white;
  transition: fill 0.3s ease-out;
}
header button svg:hover {
  background-color: rgba(255, 255, 255, .2);
}
header button svg:active {
  background-color: rgba(255, 255, 255, .4);
}
footer {
  font-size: 0.7em;
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
  padding-top: 0.25em;
  padding-bottom: 0.5em;
  background-color: #7fbc4a;
  color: #fff;
}
footer a {
  color: #fff !important;
  text-decoration: underline;
}
footer a:hover {
  text-decoration: none;
}
.github svg path {
  transform: scale(0.024);
}
main,
aside {
  position: absolute;
  top: 0;
  padding-top: 60px;
}
.main-container {
  position: relative;
  top: 0;
  color: white;
  background-color: rgba(0, 0, 0, .5);
  padding: 10px 0;
  transition: height 0.3s ease-out;
  z-index: 3;
}
main {
  transition: width 0.3s ease-out;
  width: 100vw;
  height: calc(100vh - 60px);
  z-index: 1;
}
aside {
  transition: -webkit-transform 0.3s ease-out;
  transition: transform 0.3s ease-out;
  -webkit-transform: translateX(calc(100vw + 2px));
  -moz-transform: translateX(calc(100vw + 2px));
  -ms-transform: translateX(calc(100vw + 2px));
  -o-transform: translateX(calc(100vw + 2px));
  transform: translateX(calc(100vw + 2px));
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: transform;
  position: absolute;
  z-index: 2;
  width: calc(100vw - 2px);
  height: calc(100vh - 60px);
  max-height: calc(100vh - 60px);
  border-left: 2px solid #7fbc4a;
  background-color: #f7f7f7;
}
.open aside {
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}
aside h2 {
  margin-left: 10px;
}
.audio-container {
  background: #fff;
  z-index: 2;
  opacity: 0.75;
  position: absolute;
  bottom: 0;
  padding: 0 10px;
  letter-spacing: 0.4em;
  box-sizing: border-box;
  width: 100vw;
}
.audio-container h2 {
  margin: 10px 10px 10px 0;
}
.song-controls {
  margin-top: 10px;
  margin-left: 10px;
}
.song-controls a {
  text-decoration: none;
  display: inline-block;
}
.song-controls button {
  padding: 0;
  border: 2px solid #888;
  display: inline-block;
  background-color: transparent;
  -webkit-tap-highlight-color: transparent;
  outline: none;
  opacity: 0.75;
  transition: opacity 0.3s;
  box-sizing: content-box;
  width: 30px;
  height: 30px;
  cursor: pointer;
}
.song-controls button.button-play {
  width: 40px;
  height: 40px;
  opacity: 1;
}
.song-controls .button-play svg {
  padding: 8px;
}
.song-controls button:hover {
  opacity: 1;
}
.song-controls svg {
  width: 24px;
  height: 24px;
  padding: 3px;
  fill: #888;
}
.song-progress {
  width: calc(100% - 8px);
  height: 10px;
  padding: 2px;
  border: 2px solid #888;
}
.progress-bar {
  background-color: #888;
  height: 10px;
  width: 50%;
}
.ircContainer {
  height: calc(100% - 68px);
}
.irc {
  height: 100%;
}
.bg {
  opacity: 0;
  z-index: 0;
  margin: 0;
  overflow: hidden;
  background-size: cover !important;
  background-repeat: no-repeat !important;
  background-position: center !important;
  height: 100vh;
}
.hidden {
  display: none;
}
.fadein {
  animation-duration: 1s;
  animation-name: fadein;
}
@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@media all and (min-width: 920px) {
  .open header {
    background-color: rgba(127, 188, 74, 0);
    color: rgba(255, 255, 255, 0);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, .3);
  }
  header .button-container {
    right: 0;
  }
  .open header button svg {
    fill: #000;
  }
  .open main {
    width: 50vw;
  }
  .main-container {
    top: 30vh;
  }
  .audio-container {
    background: linear-gradient(225deg, transparent 7%, #fff 0) top right;
    background-repeat: no-repeat;
    transform-origin: left;
    transition: transform 0.5s;
    top: 80px;
    left: 20px;
    bottom: auto;
    min-width: 300px;
    width: auto;
  }
  .audio-container::before {
    display: block;
    position: absolute;
    content: '';
    width: 2px;
    height: 700px;
    background-color: black;
    left: -2px;
    top: -90px;
  }
  .audio-container::after {
    display: block;
    position: absolute;
    content: '';
    width: 700px;
    height: 2px;
    background-color: black;
    left: -90px;
    top: -2px;
  }
  .audio-container:not(:hover) {
    -webkit-transform: rotate3d(9, 13, .6, 10deg);
    -moz-transform: rotate3d(9, 13, .6, 10deg);
    -ms-transform: rotate3d(9, 13, .6, 10deg);
    -o-transform: rotate3d(9, 13, .6, 10deg);
    transform: rotate3d(9, 13, .6, 10deg);
  }
  aside {
    width: calc(50vw - 2px);
    padding-top: 0;
    height: 100vh;
    max-height: 100vh;
  }
  .open aside {
    -webkit-transform: translateX(50vw);
    -moz-transform: translateX(50vw);
    -ms-transform: translateX(50vw);
    -o-transform: translateX(50vw);
    transform: translateX(50vw);
  }
}

